# cognitive_stress

./: .gitignore  CognitiveStress_Game.docx  CognitiveStress_General.docx  README.md  ratings_maze.xlsx
Documentation/maze_game/html/: annotated.html  annotated.js  classGameModel-members.html  classGameModel.html  classGameModel.js  classMazeGame-members.html  classMazeGame.html  classMazeGame.js  classMazeGame__coll__graph.map  classMazeGame__coll__graph.md5  classMazeGame_a0a8b1fa8e9165f0e7131c04f3c5e1967_cgraph.map  classMazeGame_a0a8b1fa8e9165f0e7131c04f3c5e1967_cgraph.md5  classRobot-members.html  classRobot.html  (+47 more)
HRI_poster/: Mahi-HRI-17-poster.tex  bib.bib  hri_Poster1.tex  nri_Poster1.tex  posterbib.bib
HRI_poster/Output/: hri_Poster1.fdb_latexmk  hri_Poster1.fls  nri_Poster1.fdb_latexmk  nri_Poster1.fls
HRI_poster/figures/: factor_graph1a.tex  metrics_E_H.tex  stress_model.tex
Paper/: 4d-plot.eps  BoxWiskerTimesCompMaualVsAuto.eps  BoxWiskerTimesCompMaualVsAuto2.eps  CLE_reg_One_robot.eps  CLE_reg_Two_robot.eps  HRI-16.tex  HRI-17-LBR.tex  HRI-17.tex  Mahi-HRI-17.tex  One_Robot_vs_Observer_CLE.eps  One_Robot_vs_Observer_CLE_event_aggregation.eps  ROMAN-16.tex  Two_Robots_vs_Observer_CLE.eps  Two_Robots_vs_Observer_CLE_event_aggregation.eps  coder_vs_posture.eps  confusion-matrix.eps  data_maze_game.eps  final-legend.eps  histograms.eps  lab_landmark.eps  prediction_vs_b_p_2.eps  prediction_vs_h_b_p.eps  sig-alternate.cls  sigproc-2.bib
Paper/Output/: HRI-17-LBR.fdb_latexmk  HRI-17-LBR.fls  HRI-17.fdb_latexmk  HRI-17.fls  Mahi-HRI-17.fdb_latexmk  Mahi-HRI-17.fls  ROMAN-16.fdb_latexmk  ROMAN-16.fls
Paper/cognitive_stress_plot/: box_plot.py  coder_eval_1_2.eps  coder_eval_2.py  coder_vs_h_b_p.eps  coder_vs_h_b_p.py  coder_vs_h_b_p_2.eps  coder_vs_physiology.eps  coder_vs_physiology.py  coder_vs_posture.py  coder_vs_posture_2.eps  coder_vs_resperatory.eps  coder_vs_resperatory.py  coder_vs_resperatory_3.eps  expected_coder_eval.eps  expected_coder_evaluation.py  hvr_prediction_vs_human_observation.eps  orange_learner.py  pred_v_b_p.py  pred_v_h_b_p.py  pred_vs_resperatory.py  prediction_vs_b_p_2.eps  prediction_vs_coder_evaluation.py  prediction_vs_h_b_p.eps  prediction_vs_human_observation.eps  prediction_vs_physiological_evaluation.py  timestamp_convert_libreoffice.txt  window_pred_vs_coder_and_phys.py  windowed_prediction_vs_human_observation.eps
Paper/tmp/: coder_eval_1_2.eps
ROS_Packages/src/maze_game/: CMakeLists.txt  package.xml
ROS_Packages/src/maze_game/Documentation/: maze_game.Doxyfile
ROS_Packages/src/maze_game/export/: 1443151562.802211_prospero.csv  1443154720.223774_miranda.csv  1443162869.069144_miranda.csv  build_feature_2.py  build_features.py  orange_training_set.tab  output.csv
ROS_Packages/src/maze_game/export/Old Data/: 1442779475.717032_miranda.csv  1442782233.742011_miranda.csv  1442790561.849077_miranda.csv  1442888373.344591_prospero.csv  1442890955.279111_miranda.csv  1443037267.999966_miranda.csv  1443038035.628213_miranda.csv  1443041189.270876_miranda.csv  1443041988.585349_miranda.csv  1443042382.447708_miranda.csv  1443051044.581304_prospero.csv  1443121525.900615_miranda.csv  1443124010.437992_miranda.csv  1443140870.039650_prospero.csv  1443143308.301299_prospero.csv  1443146015.368067_prospero.csv  2015-Sep-05 00_08_40.945508_prospero.csv
ROS_Packages/src/maze_game/export/model1/combined_selected_attributes/: training.csv
ROS_Packages/src/maze_game/export/model1/one/: 1469403325.104237_miranda.csv
ROS_Packages/src/maze_game/export/model1/three/: 1469407392.670426_miranda.csv  1469407439.884913_trinculo.csv  1469407492.978981_ferdinand.csv
ROS_Packages/src/maze_game/export/model1/two/: 1469396000.726605_miranda.csv  1469396032.881660_trinculo.csv
ROS_Packages/src/maze_game/export/model2/combined/: combined2.csv
ROS_Packages/src/maze_game/export/model2/one/: 1470162775.369407_trinculo.csv
ROS_Packages/src/maze_game/export/model2/three/: 1470160321.783218_miranda.csv  1470160347.415853_trinculo.csv  1470160385.158946_ferdinand.csv
ROS_Packages/src/maze_game/export/model2/two/: 1470158889.718494_miranda.csv  1470158917.209609_trinculo.csv
ROS_Packages/src/maze_game/export/one/: 1469403325.104237_miranda.csv
ROS_Packages/src/maze_game/export/three/: 1469407392.670426_miranda.csv  1469407439.884913_trinculo.csv  1469407492.978981_ferdinand.csv
ROS_Packages/src/maze_game/export/two/: 1469396000.726605_miranda.csv
ROS_Packages/src/maze_game/include/: SVM.ows  expectedTimes (copy).txt  points.txt
ROS_Packages/src/maze_game/launch/: map_server.launch  maze_game.launch  turtlebot_amcl_multi.launch
ROS_Packages/src/maze_game/launch/includes/: 3dsensor.launch  amcl.launch.xml  minimal.launch  move_base.launch.xml
ROS_Packages/src/maze_game/rviz/: navigation.rviz
ROS_Packages/src/maze_game/scripts/: OrangeTesting.py  random_maze_run.py
ROS_Packages/src/maze_game/src/: GameModel.cpp  GameModel.h  MazeGame.cpp  MazeGame.h  Robot.cpp  Robot.h  franticness.h  show_maze.cpp
ROS_Packages/src/maze_game/srv/: AddRobot.srv  ExportRunData.srv  RequestAverageScores.srv  RequestMazeMarkers.srv
Web Resources/: cssstyles.css  index.html  lineTest.html  videoTest.html
Web Resources/scripts/: NAV2D.js
export/Allen/: ObservedStress.csv
export/Caele/: ObservedStress.csv
export/Conner/: Observed Stress.csv
export/Harshal/: Observed Stress.csv
export/James/: ObservedStress.csv
export/Jordan/: ObservedStress.csv
export/Lucas/: ObservedStress.csv
export/Marshall/: ObservedStress.csv
export/Nick/: ObservedStress.csv
export/Old Data/: caliban_1443919514.53.csv  caliban_1443921613.57.csv  caliban_1443921790.33.csv  caliban_1444243338.99.csv  ferdinand_1443835660.21.csv  trinculo_1443990689.18.csv
export/Rahul/: ObservedStress.csv
export/Sayanti/: ObservedStress.csv
export/Seberina/: ObservedStress.csv
export/Soumil/: ObservedStress.csv
export/Tina/: ObservedStress.csv
export/mahi1-nocoin_showedup/: trinculo_1457051911.08.csv
export/mahi2-nocoin-showedup/: trinculo_1457053530.07.csv
(+638 files in other folders)
